# access-todo

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.zcode/plans/: plan-sess_668733d3-3bd5-46c9-91b9-fa220757f8b0.md
android/: build.gradle.kts  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/desktoppostit/: MainActivity.kt  PostItApp.kt
android/app/src/main/java/com/desktoppostit/data/: GistClient.kt  Models.kt  Settings.kt  TodoRepository.kt
android/app/src/main/java/com/desktoppostit/ui/: AddTodoDialog.kt  PostItScreen.kt  SettingsScreen.kt
android/app/src/main/java/com/desktoppostit/ui/theme/: Theme.kt
android/app/src/main/java/com/desktoppostit/widget/: TodoWidget.kt
android/app/src/main/java/com/desktoppostit/worker/: SyncWorker.kt
android/app/src/main/res/drawable/: ic_postit.xml
android/app/src/main/res/layout/: todo_widget_initial.xml
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/xml/: todo_widget_info.xml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.svelte  api.ts  app.css  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: auth.rs  lib.rs  main.rs  routes.rs  state.rs
crates/api-server/tests/: routes.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  gist.rs  lib.rs  merge.rs  model.rs  store.rs  sync.rs
crates/core/tests/: gist.rs  merge.rs  model.rs  store.rs  sync.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  main.rs  tools.rs
crates/mcp-server/tests/: tools.rs
docs/: 사용자가이드.md  에이전트연결가이드.md  프로젝트현황.md
docs/superpowers/plans/: 2026-07-07-desktop-todo-agents.md
docs/superpowers/specs/: 2026-07-07-desktop-todo-agents-design.md
shared/: schema.json
