[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[lib]
name = "mcp_server"
path = "src/lib.rs"

[[bin]]
name = "mcp-server"
path = "src/main.rs"
