[package]
name = "postit-todo"
version = "0.1.0"
edition = "2021"
description = "Desktop post-it TODO widget"

[lib]
name = "postit_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# this feature is used for production builds where `devUrl` is disabled
custom-protocol = ["tauri/custom-protocol"]
